--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Pillow==9.5.0
 PyKakao==0.0.4
 python-dateutil==2.8.2
 pytz==2023.3
-# requests==2.28.2
+requests==2.28.2
 six==1.16.0
 sqlparse==0.4.3
 tzdata==2023.3
